# TracePad

./: README.md  TODO  drawing.py  drawing_gtk.py  drawing_helpers.py  drawing_rewrite.py  flake.nix  multitouch_reader.py  pyproject.toml  run_evdev_reader.py  touchpad_reader.py
.direnv/: flake-profile-5-link  flake-profile-6-link
gtk_sandbox/: get_display_server.py  gtk_fullscreen.py
src/: app.py  drawing.py  vec2.py
src/touchpad/: thread.py
